--- a/src/imageUploaderPage/imageUploader.css
+++ b/src/imageUploaderPage/imageUploader.css
@@ -335,7 +335,7 @@
   
   .image-wrapper .croped-image-text-wrapper .fullimg-text1 .cropped-img {
     width: 100%;
-    height: 50vh;
+    height: 200px;
     padding: 0px 16px 0px 16px;
   }
   
@@ -355,11 +355,13 @@
   .fullimg-text .textarea-component2 {
     margin-top: 40px;
     width: 90%;
+    height: 300px;
   }
 
   .fullimg-text1 .textarea-component1 {
   margin-top: 56px;
   width: 90%;  
+  height: 300px;
   }
 
   .image-wrapper .upload-wrapper .upload-convert-wrapper .upload-button {
@@ -372,5 +374,25 @@
   .image-wrapper .upload-wrapper .selectTag {
     width: 90%;
     height: 48px;
+  }
+
+  .image-wrapper .progressBar {
+    position: relative;
+    margin: 4% 0px 0% 0px;
+    overflow: hidden;
+    width: 120px;
+    height: 20px;
+    border-radius: 5px;
+    background-color: #eee;
+  }
+  
+  .image-wrapper .progressBar .progressPercentage {
+    font-weight: 600;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    color: #eee;
+    /* text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555; */
   }
 }
