--- a/src/imageUploaderPage/imageUploader.css
+++ b/src/imageUploaderPage/imageUploader.css
@@ -290,6 +290,25 @@
     flex-direction: column;
   }
 
+  .image-wrapper .upload-wrapper .image-outer-wrapper .uploaded-image-wrapper {
+    margin-top: 20px;
+    max-height: 250px;
+    width: 100%;
+    overflow: auto; 
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+      width: 4px;
+    }
+  
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      background-color: #5963fb;
+    }
+  }
+
   .nav-bar .signIn-button {
     font-size: 12px;
   }
@@ -297,6 +316,10 @@
   .nav-bar .signUp-button {
     padding: 4px 16px 4px 16px;
     font-size: 12px;
+  }
+
+  .full-text-image-wrapper {
+    margin-bottom: 140px;
   }
 
   .image-wrapper .full-text-image-wrapper .fullimg-text {
@@ -308,7 +331,7 @@
   
   .image-wrapper .full-text-image-wrapper .fullimg-text .full-image-wrapper {
     width: 100%;
-    height: 50vh;
+    height: 200px;
     padding: 0px 16px 0px 16px;
   }
   
@@ -322,7 +345,7 @@
   .image-wrapper .croped-image-text-wrapper {
     transform: translate(14%,16%);
     margin-bottom: 140px;
-  }
+    }
 
   .image-wrapper .croped-image-text-wrapper .fullimg-text1 {
     padding: 40px 4% 0px 4%;
@@ -380,8 +403,8 @@
     position: relative;
     margin: 4% 0px 0% 0px;
     overflow: hidden;
+    left: 0px;
     width: 120px;
-    height: 20px;
     border-radius: 5px;
     background-color: #eee;
   }
